microservices/k8s/1_account_deployment_v1_debug.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-deployment-v1
  labels:
    app: account
    version: v1          
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account
      version: v1          
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1      
  template:
    metadata:
      labels:
        app: account
        version: v1          
        cluster: clustered-app
    spec:
      containers:
        - name: account
          image: tuantahp/account:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
            - containerPort: 7800
            - containerPort: 5005 # JDWP port
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            failureThreshold: 1
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readiness
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          startupProbe:
            httpGet:
              path: /readiness
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
