microservices/k8s/2_gateway_deployment_v1_debug.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment-v1
  labels:
    app: gateway
    version: v1          
spec:
  replicas: 2  
  selector:
    matchLabels:
      app: gateway
      version: v1      
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1      
  template:
    metadata:
      labels:
        app: gateway
        version: v1      
        cluster: clustered-app
    spec:
      containers:
        - name: gateway
          image: tuantahp/gateway:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 31862
            - containerPort: 7800
            - containerPort: 5006 # JDWP port
          livenessProbe:
            httpGet:
              path: /health
              port: 31862
            failureThreshold: 1
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readiness
              port: 31862
            initialDelaySeconds: 5
            periodSeconds: 5
          startupProbe:
            httpGet:
              path: /readiness
              port: 31862
            failureThreshold: 30
            periodSeconds: 10
