microservices/k8s/5_keycloak_service.yaml
#2.2.2 keycloak
#2.2.2.1 Cấu hình timeout và retry
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak-virtualservice
spec:
  hosts:
  - "auth.smartconsultor.com"
  gateways:
  - gateway-gateway
  http:
  - match:
    route:
    - destination:
        host: keycloak.istio-system.svc.cluster.local
        port:
          number: 443
    retries:
      attempts: 5
      perTryTimeout: 5s
    timeout: 30s  
---
#2.2.2.2 Sử dụng circuit breaker
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: keycloak-destinationrule
spec:
  host: keycloak.istio-system.svc.cluster.local
  trafficPolicy:
    tls:
      mode: SIMPLE
      credentialName: smartconsultor-certificate-tls   
    outlierDetection:
      consecutiveGatewayErrors: 5
      interval: 5m
      baseEjectionTime: 15m
      maxEjectionPercent: 50
    loadBalancer:
      simple: LEAST_REQUEST #ROUND_ROBIN
    connectionPool:
      http:
        http1MaxPendingRequests: 100
        http2MaxRequests: 1000
        maxRequestsPerConnection: 10
        idleTimeout: 30s
      tcp:
        maxConnections: 100   
        connectTimeout: 30ms
        tcpKeepalive:
          time: 7200s
          interval: 75s
